test with invalid queries

--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
         <div style="font-size: 16pt;margin-top: 16pt;">Top-<span id="k">10</span> query completion</div>
         <div>
             <input type="range" min="1" max="15" value="10" step="1" style="width: 100%;border-width: 5px;" onchange="showValue(this.value)" />
-            <input type="text" name="country" id="autocomplete" style="width: 100%; border-width: 5px;"/>
+            <input type="text" id="autocomplete" style="width: 100%; border-width: 5px;"/>
         </div>
     </div>
 
